test/valid/58168_sumNumInArray/sumNumInArray.agu
-- Author: 58168, Henrique Costa Vale

let sum(a) : Int [] -> Int =
  let b : Int = 0 ;
  let i : Int = 0 ;
  while i < length(a) do (
	set b = b + a[i];
	set i = i + 1
  );
  b

let main(_) : Unit -> Unit =
  print(sum(new Int[4 | 1]))