test/invalid-syntax/58168_undeclaredVar2/58168_undeclaredVar2.agu
-- Author: 58168, Henrique Costa Vale

let f(a) : Int [] -> Int =
   let b : Int = 3;
   while b >< a[i] do (
      set i = i + 1

  )


let _ : Unit =
  f(new Int[3 | 0])

